Update contact email

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <footer>
             <div class="contact">
                 <h3>Support</h3>
-                <p>Need help? Email us at <a href="mailto:support@pgepricingapp.com">support@pgepricingapp.com</a></p>
+                <p>Need help? Email us at <a href="mailto:gurpreet.appdev@myyahoo.com">gurpreet.appdev@myyahoo.com</a></p>
                 <p>Or open an issue on our <a href="/support">support page</a></p>
             </div>
             <p>&copy; 2025 Gurpreet Singh. All rights reserved.</p>
