--- a/privacy.html
+++ b/privacy.html
@@ -115,7 +115,7 @@
 
         <h2>Contact Us</h2>
         <p>If you have questions about this Privacy Policy, please contact us at:</p>
-        <p>Email: <a href="mailto:support@pgepricingapp.com">support@pgepricingapp.com</a></p>
+        <p>Email: <a href="mailto:gurpreet.appdev@myyahoo.com">gurpreet.appdev@myyahoo.com</a></p>
 
         <h2>Your Rights</h2>
         <p>Since we do not collect any personal information, there is no data to access, modify, or delete. All settings
