--- a/support.html
+++ b/support.html
@@ -93,7 +93,7 @@
 
         <div class="contact-box">
             <h2>Need Help?</h2>
-            <p>Email us at: <a href="mailto:support@pgepricingapp.com">support@pgepricingapp.com</a></p>
+            <p>Email us at: <a href="mailto:gurpreet.appdev@myyahoo.com">gurpreet.appdev@myyahoo.com</a></p>
             <p>We typically respond within 24 hours</p>
         </div>
 
@@ -144,7 +144,7 @@
 
         <h2>Feature Requests</h2>
         <p>Have an idea for a new feature? We'd love to hear from you! Send your suggestions to <a
-                href="mailto:support@pgepricingapp.com">support@pgepricingapp.com</a></p>
+                href="mailto:gurpreet.appdev@myyahoo.com">gurpreet.appdev@myyahoo.com</a></p>
 
         <a href="index.html" class="back-link">← Back to Home</a>
     </div>
