Replace lightning bolt with custom app icon

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <body>
     <div class="container">
         <div class="hero">
-            <div class="icon">⚡</div>
+            <div class="icon"><img src="images/icon.png" alt="PGE Pricing App Icon" style="width: 120px; height: 120px; border-radius: 20px;"></div>
             <h1>PGE Pricing</h1>
             <p class="tagline">Real-time PG&E electricity rates at your fingertips</p>
             <p>Track hourly electricity prices, set custom alerts, and save money on your energy bills with smart scheduling.</p>
