Update app name and icon to FleXtricity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PGE Pricing - Real-time Electricity Rates</title>
+    <title>FleXtricity - Real-time Electricity Rates</title>
     <style>
         * {
             margin: 0;
@@ -169,15 +169,15 @@
 <body>
     <div class="container">
         <div class="hero">
-            <div class="icon"><img src="images/icon.png" alt="PGE Pricing App Icon" style="width: 120px; height: 120px; border-radius: 20px;"></div>
-            <h1>PGE Pricing</h1>
+            <div class="icon"><img src="images/icon.png" alt="FleXtricity App Icon" style="width: 120px; height: 120px; border-radius: 20px;"></div>
+            <h1>FleXtricity</h1>
             <p class="tagline">Real-time PG&E electricity rates at your fingertips</p>
             <p>Track hourly electricity prices, set custom alerts, and save money on your energy bills with smart scheduling.</p>
         </div>
 
         <div class="screenshots">
             <div class="screenshot-wrapper">
-                <img src="images/screenshot1.png" alt="PGE Pricing main dashboard showing hourly rate chart">
+                <img src="images/screenshot1.png" alt="FleXtricity main dashboard showing hourly rate chart">
                 <p class="screenshot-caption">Real-time pricing dashboard</p>
             </div>
             <div class="screenshot-wrapper">
