--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - PGE Pricing App</title>
+    <title>Privacy Policy - FleXtricity App</title>
     <style>
         * {
             margin: 0;
@@ -73,7 +73,7 @@
         <p class="effective-date">Effective Date: November 13, 2025</p>
 
         <h2>Overview</h2>
-        <p>PGE Pricing App ("the App") is committed to protecting your privacy. This Privacy Policy explains how we
+        <p>FleXtricity App ("the App") is committed to protecting your privacy. This Privacy Policy explains how we
             handle information when you use our application.</p>
 
         <h2>Information We Do NOT Collect</h2>
