--- a/support.html
+++ b/support.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support - PGE Pricing App</title>
+    <title>Support - FleXtricity App</title>
     <style>
         * {
             margin: 0;
@@ -89,7 +89,7 @@
 
 <body>
     <div class="container">
-        <h1>⚡ PGE Pricing App - Support</h1>
+        <h1>⚡ FleXtricity App - Support</h1>
 
         <div class="contact-box">
             <h2>Need Help?</h2>
@@ -114,7 +114,7 @@
 
             <div class="faq-item">
                 <h3>How do I add the widget to my home screen?</h3>
-                <p>Long-press on your home screen, tap the "+" button in the top left, search for "PGE Pricing", select
+                <p>Long-press on your home screen, tap the "+" button in the top left, search for "FleXtricity", select
                     your preferred widget size, and tap "Add Widget".</p>
             </div>
 
