Update App Store link in index.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
 
         <div class="download-section">
-            <a href="https://apps.apple.com" class="download-btn">Download on the App Store</a>
+            <a href="https://apps.apple.com/us/app/flextricity/id6755277862" class="download-btn">Download on the App Store</a>
         </div>
 
         <footer>
